--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 }
 
 jar{
-	mainClassName='kr.or.dgit.post.PostMain'
-	baseName='PostMain'
+	mainClassName='kr.or.dgit.kdu_swexam.Main'
+	baseName='Main'
 	appendix='bin'
 	version=1.0
 	manifest{
